update some style

--- a/templates/restaurant/add_meal.html
+++ b/templates/restaurant/add_meal.html
@@ -2,8 +2,12 @@
 {% load bootstrap4 %}
 
 {% block content %}
-
-    <div class="col-lg-offset-4 col-lg-8">
+    <style>
+        #meal{
+            padding-left: 20%;
+        }
+    </style>
+    <div class="col-lg-offset-4 col-lg-8" id='meal'>
         <div class="panel">
             <div class="panel-heading bg-blue">
                 <h4 class="panel-title text-center text-white">
