--- a/templates/restaurant/meal.html
+++ b/templates/restaurant/meal.html
@@ -1,7 +1,12 @@
 {% extends 'restaurant/base.html' %}
 
 {% block content %}
-  <div class="col-lg-offset-3 col-sm-offset-3 col-lg-10 col-sm-12">
+   <style>
+        #meals{
+            padding-left: 20%;
+        }
+    </style>
+  <div class="col-lg-offset-3 col-sm-offset-3 col-lg-10 col-sm-12" id="meals">
     <div class="panel">
       <div class="panel-heading bg-blue">
           <h4 class="panel-title text-center text-white">Meals</h4>
