--- a/templates/restaurant/base.html
+++ b/templates/restaurant/base.html
@@ -14,7 +14,7 @@
           width="70" height="70" />
       <br/>
       <br/>
-      <h4>Hi, {{ request.user.get_username }}</h4>
+      <h4>Hi, {{ request.user.get_full_name }}</h4>
       <h5>{{ request.user.restaurant.name }}</h5>
     </div>
 
