--- a/templates/restaurant/edit_meal.html
+++ b/templates/restaurant/edit_meal.html
@@ -1,8 +1,15 @@
 {% extends 'restaurant/base.html' %}
 {% load bootstrap4 %}
 
-{% block content %}
-    <div class="col-lg-offset-3 col-lg-8">
+{% block page %}
+    <style>
+        #meal{
+            {% comment %} padding-left: 20%; {% endcomment %}
+            background-color:  #e3e3ec;
+            margin-left: 20%;
+        }
+    </style>
+    <div class="col-lg-offset-2 col-lg-8" id='meal'>
         <div class="panel">
             <div class="panel-heading bg-blue">
                 <h4 class="panel-title text-center text-white">
