--- a/templates/restaurant/meal.html
+++ b/templates/restaurant/meal.html
@@ -1,50 +1,53 @@
 {% extends 'restaurant/base.html' %}
 
-{% block content %}
-   <style>
-        #meals{
-            padding-left: 20%;
+{% block page %}
+
+    <style>
+        #meal{
+            {% comment %} padding-left: 20%; {% endcomment %}
+            background-color:  #e3e3ec;
+            margin-left: 20%;
         }
     </style>
-  <div class="col-lg-offset-3 col-sm-offset-3 col-lg-10 col-sm-12" id="meals">
-    <div class="panel">
-      <div class="panel-heading bg-blue">
-          <h4 class="panel-title text-center text-white">Meals</h4>
-      </div>
-      <div class="panel-body">
-          <div class="text-right">
-              <a href="{% url 'restaurant-add-meal' %}" class="btn btn-pink">Add Meal</a>
-              <br/>
-              <br/>
-          </div>
 
-          <table class="table table-bordered table-hover table-striped">
-              <thead>
-                <tr class="bg-gray text-white">
-                  <th>Id</th>
-                  <th>Name</th>
-                  <th>Short Description</th>
-                  <th>Price</th>
-                  <th class="text-center">Image</th>
-                </tr>
-              </thead>
-              <tbody>
-                  {% for meal in meals %}
-                      <tr>
-                        <td scope="row">{{ meal.id }}</td>
-                        <td><a href="{% url 'restaurant-edit-meal' meal.id %}">{{ meal.name }}</a></td>
-                        <td>{{ meal.short_description }}</td>
-                        <td>{{ meal.price }}</td>
-                        <td class="text-center"><img class="img-rounded"
-                            src="{{ MEDIA_URL }}{{ meal.image }}" width="50" height="50"></td>
-                      </tr>
+    <div class="panel" id='meal'>
+        <div class="panel-heading bg-blue">
+            <h4 class="panel-title text-center text-white">Meals</h4>
+        </div>
+        <div class="panel-body">
+            <div class="text-right">
+                <a href="{% url 'restaurant-add-meal' %}" class="btn btn-pink">Add Meal</a>
+                <br/>
+                <br/>
+            </div>
 
-                  {% endfor %}
-              </tbody>
-          </table>
-      </div>
-  </div>
+            <table class="table table-bordered table-hover table-striped">
+                <thead>
+                  <tr class="bg-gray text-white">
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Short Description</th>
+                    <th>Price</th>
+                    <th class="text-center">Image</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    {% for meal in meals %}
+                        <tr>
+                          <td scope="row">{{ meal.id }}</td>
+                          <td><a href="{% url 'restaurant-edit-meal' meal.id %}">{{ meal.name }}</a></td>
+                          <td>{{ meal.short_description }}</td>
+                          <td>{{ meal.price }}</td>
+                          <td class="text-center"><img class="img-rounded"
+                              src="{{ MEDIA_URL }}{{ meal.image }}" width="50" height="50"></td>
+                        </tr>
 
-  </div>
-    
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+
+
 {% endblock %}
